DOMjudge Programming Contest Judging System

Version 1.0.1 - CVS
-------------------
 - Added 'make check' target to submit test-sources.
 - Fixed that no compiler output gives compilation error.
 - When solutions timeout, first try to kill graciously (Closes: #1312848)
 - Removed LaTeX packages from the sources to remove GPL/LPPL conflicts.
 - Added diff to previous submission in source display (Closes: #1310244)

Version 1.0.0 - 4 October 2005
------------------------------
 - Updates to team manual and other documentation (Closes: #1306335).
 - Fix case-bug in sql/mysql_privileges.sql example.
 - Drop checking for existence of testdata in www/jury/checkconfig.php,
   since the webserver doesn't need to be able to read that data.
 - Minor enhancements to the jury webinterface display.
 - Added config option to disable chroot environment for judging.
 - Improved sample data.
 - Add sort-order field to category table to enable some categories
   to be sorted at the bottom automatically (Closes: #1311885).
 - Some other small bugfixes.

Version 1.0.0 Release Candidate 1 - 21 September 2005
-----------------------------------------------------
 - Added config option to autoconfigure team IP addresses.
 - Added config option to (not) show compiler output to teams.
 - Moved C-code from headers to separate files.
 - Fixed bugs where submitdaemon couldn't handle spaces in language ext.
 - Added balloons notification script (Closes: #1238416).
 - Added feature: jury can do optional or required auditing of judgings
   (Closes: #1070240).
 - Accept late submissions, but do not judge them (Closes: #1238421).
 - Improve efficiency of requesting contest data.
 - Support the ICPC Validator Interface standard, concerning the
   parameters of the compare script. The result.xml file is generated
   but is not yet considered by test_solution (See: #1238454).
 - Small improvements in Makefile's and install scripts.
 - Some other small bugfixes.

Version 0.3.1 - 16 July 2005